--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.3.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.6",
     "cypress-xpath": "^2.0.1",
     "typescript": "^4.9.4"
