--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["cypress", "node", "cypress-real-events", "cypress-file-upload"]
+    "types": ["cypress", "node", "cypress-real-events", "cypress-file-upload", "cy-verify-downloads"]
   },
   "include": ["**/*.ts"]
 }
