--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Dunja Jovanovic",
   "license": "ISC",
   "devDependencies": {
+    "cy-verify-downloads": "^0.1.11",
     "cypress": "^12.3.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.6",
